--- a/style.css
+++ b/style.css
@@ -1,1 +1,584 @@
-#home,main{max-width:1200px;margin:auto;width:100%}#home,.menu-links,.menu-logo,.navbar,header{display:flex}#home,header,main{width:100%}.menu-links a,.slider-wrapper i{font-style:normal;font-weight:400}#home,.slider-nav a,.slider-nav a:hover,header{background-color:#fff}.slider,.slider2text{scroll-snap-type:x mandatory}.slider a,.slider2text{scroll-snap-align:start;object-fit:cover}.slider-nav,.slider2-nav{column-gap:.5rem;left:50%;transform:translateX(-50%)}*{margin:0;padding:0;box-sizing:border-box}@font-face{font-family:'Neue Haas Grotesk Display Pro';src:url(NHAASGROTESKTXPRO-55RG.ttf) format("truetype")}body{background:#fff;font-family:Arial,Helvetica,sans-serif}header{max-width:1900px}#home{justify-content:space-between}.menu-logo{max-width:fit-content;padding:8px 0 8px 18px}.menu-logo img{width:166px;height:63px}#arrowSlider2,.slider-wrapper i{height:50px;width:50px;text-align:center}.navbar{padding:24px 48px}.menu-links{justify-content:space-between;width:318px;height:auto;align-items:center}.menu-links a{display:block;color:#000;text-decoration:none;font-family:Inter,sans-serif;font-size:18px;line-height:normal;letter-spacing:-1.2px}#arrowSlider2,.sobre button{font-family:Arial,Helvetica,sans-serif}.btn-toggle{position:absolute;right:3rem;top:5%;display:none;flex-direction:column;justify-content:space-between;width:15px;height:15px}.btn-toggle .bar{height:3px;width:100%;background-color:#333;border-radius:20px}.slider-wrapper{position:relative;min-width:200px;max-width:2520px;margin:0 auto}.slider-wrapper i{position:absolute;font-size:14px;color:#fff;border-radius:50%;cursor:pointer;top:50%}.slider-wrapper i:first-child{left:2%}.slider-wrapper i:last-child{right:2%}.slider{display:flex;width:auto;overflow-x:auto;scroll-behavior:smooth;scrollbar-width:0;box-shadow:0 1.5rem 3 rem -.75rem hsla(0,saturation,lightness,alpha)}.slider::-webkit-scrollbar{display:none}.slider.dragging .slider-img{cursor:grab;user-select:none}.slider.no-transition{scroll-behavior:auto}.slider img{width:100%;max-width:2900px;object-fit:cover}.slider a{flex:1 0 100%;scroll-snap-type:none}.slider-nav{display:flex;position:absolute;bottom:1rem;z-index:1}.slider2,.slider2-wrapper,.slider2text,.sobre{position:relative}.slider-nav a{width:.6rem;height:.6rem;border-radius:50%;opacity:.5;transition:opacity 250ms}.sobre button,.sobre p{height:auto;font-style:normal;font-weight:400;z-index:1}.slider-nav a:hover{opacity:1;cursor:pointer}#more,.img2{display:none}@media only screen and (max-width:568px){.img1{display:none}.img2{display:block}}.sobre{width:100%;max-width:800px;margin:100px auto 120px;padding:0 10.75vw}.sobre p{display:flex;flex-direction:column;width:100%;align-items:center;justify-content:center;font-size:14px;line-height:22px;color:#333}#myBtn{display:flex;align-content:center;margin:14px auto auto}.sobre button{grid-column-start:2;grid-column-end:2;grid-row-start:3;grid-row-end:3;align-items:center;align-content:baseline;margin:0 16px;padding:6px 16px;border-radius:20px;max-width:120px;background-color:transparent;list-style:none;text-decoration:none;font-size:16px;line-height:100%}#arrowSlider2,.slider2-nav a{border-radius:50%;cursor:pointer}.contato h1,.textslide p,.textslide q{line-height:normal}.imagem-perfil{width:100%;max-width:800px;margin:120px auto;padding:0 10.75vw}.imagem-perfil img{width:100%;max-width:1200px}@media only screen and (max-width:768px){#home,.btn-toggle,.menu-links.active{display:flex}.menu-links{display:none;flex-direction:column;align-items:center;width:100%;height:100px}.navbar{padding:2px 48px}#home{flex-direction:column}.menu-links a{padding:.25rem 2rem}.sobre{display:flex;flex-direction:column;align-items:center;justify-content:center;align-content:stretch;padding:0 2rem}.imagem-perfil{display:flex;margin-bottom:8rem;padding:0 2rem}.imagem-perfil img{width:100%;max-width:800px}}.slider2-wrapper{width:100%;max-width:1200px;justify-content:center;align-content:center}.slider2{width:100%;max-width:1050px;margin:auto;padding:10px 0}.slider2text{display:flex;overflow-x:hidden;flex:1 0 100%;max-height:900px;width:100%;text-align:center}.textslide q{align-content:center;font-size:28px;font-style:normal;font-weight:400}.textslide p{margin-top:22px;font-size:28px;font-style:bold;font-weight:700}.slider2-nav{display:flex;position:absolute;bottom:-3rem;z-index:1}.slider2-nav a{width:.75rem;height:.75rem;background-color:grey;opacity:.75;transition:opacity 250ms}.active,.dot2:hover{opacity:1}#arrowSlider2{position:absolute;font-size:40px;color:#000;top:40%;right:-6%}#arrowSlider2:first-child{left:-6%}@media only screen and (max-width:788px){.textslide p,.textslide q{font-size:16px}.slider2-nav{bottom:-1.5rem}.slider2-nav a{width:.5rem;height:.5rem}.slider2-wrapper{width:100%;max-width:800px;padding:0 5rem}#arrowSlider2{font-size:30px}#arrowSlider2:first-child{left:0}#arrowSlider2:last-child{right:0}}.contato{padding:0 2rem;margin-bottom:220px;margin-top:100px}.contato h1{width:100%;max-width:1200px;font-family:Inter,sans-serif;font-size:17vw;font-style:normal;font-weight:400;text-align:stretch;justify-content:start}.grid-footer h2,.grid-footer h5,.grid-footer h6{font-family:Arial,Helvetica,sans-serif}.contato p{text-align:right}@media only screen and (min-width:868px){.contato{padding:0 2rem;margin-bottom:120px}.contato h1{font-size:200px}}@media only screen and (max-width:588px){.imagem-perfil{display:flex;margin-bottom:5rem;padding:0 2rem}.imagem-perfil img{width:100%;max-width:600px}.contato{padding:0 2rem;margin-bottom:120px}.contato h1{font-size:4rem}.contato p{text-align:right}}footer{background-color:#000;padding:20px 30px 15px}.grid-footer{display:grid;grid-template-columns:1fr 1fr 1fr;color:#a3a3a3;padding-bottom:50px}.grid-footer img{width:250px;grid-column-start:1;grid-row-start:1;padding:30px 50px 10px;position:absolute}@media screen and (max-width:560px){.grid-footer img{width:190px;height:auto;padding-left:10px}}.grid-footer h2{margin-top:1.25rem;grid-column-start:3;grid-row-start:1;align-items:center;font-size:14px;font-weight:700 700}.copyright,.grid-footer h5,.grid-footer h6{font-size:14px;font-weight:400}.grid-footer h5{margin-top:1.5rem;grid-column-start:3;grid-row-start:2}.grid-footer h6{margin-top:1.25rem;grid-column-start:3;grid-row-start:3}.grid-footer a{grid-column-start:3;grid-row-start:4}.copyright{padding:20px 20px 0;color:#333;width:100%;max-width:1900px;display:flex;align-items:center;justify-content:center;font-family:Arial,sans-serif;border-top:2px solid #333}
+* {
+    margin:0;
+    padding:0;
+    box-sizing:border-box
+    }
+    
+    @font-face {
+    font-family:'Neue Haas Grotesk Display Pro';
+    src:url(NHAASGROTESKTXPRO-55RG.ttf) format("truetype")
+    }
+    
+    body {
+    background:#FFF;
+    font-family:Arial,Helvetica,sans-serif
+    }
+    
+    main {
+    width:100%;
+    max-width:1200px;
+    margin:auto
+    }
+    
+    header {
+    display:flex;
+    width:100%;
+    max-width:1900px;
+    background-color:#FFF
+    }
+    
+    #home {
+    display:flex;
+    justify-content:space-between;
+    background-color:#FFF;
+    width:100%;
+    max-width:1200px;
+    margin:auto
+    }
+    
+    .menu-logo {
+    display:flex;
+    max-width:fit-content;
+    padding:8px 0 8px 18px
+    }
+    
+    .menu-logo img {
+    width:166px;
+    height:63px
+    }
+    
+    .navbar {
+    display:flex;
+    padding:24px 48px
+    }
+    
+    .menu-links {
+    display:flex;
+    justify-content:space-between;
+    width:318px;
+    height:auto;
+    align-items:center
+    }
+    
+    .menu-links a {
+    display:block;
+    color:#000;
+    text-decoration:none;
+    font-family:'Inter',sans-serif;
+    font-size:18px;
+    font-style:normal;
+    font-weight:400;
+    line-height:normal;
+    letter-spacing:-1.2px
+    }
+    
+    .btn-toggle {
+    position:absolute;
+    right:3rem;
+    top:5%;
+    display:none;
+    flex-direction:column;
+    justify-content:space-between;
+    width:15px;
+    height:15px
+    }
+    
+    .btn-toggle .bar {
+    height:3px;
+    width:100%;
+    background-color:#333;
+    border-radius:20px
+    }
+    
+    @media only screen and (max-width: 768px) {
+        .btn-toggle {
+        display:flex
+        }
+        
+        .menu-links {
+        display:none;
+        flex-direction:column;
+        align-items:center;
+        width:100%;
+        height:100px
+        }
+        
+        .navbar {
+        padding:2px 48px
+        }
+        
+        #home {
+        display:flex;
+        flex-direction:column
+        }
+        
+        .menu-links a {
+        padding:.25rem 2rem
+        }
+        
+        .menu-links.active {
+        display:flex
+        }
+    }
+    
+    .slider-wrapper {
+    position:relative;
+    min-width:200px;
+    max-width:2520px;
+    margin:0 auto
+    }
+    
+    .slider-wrapper i {
+    position:absolute;
+    height:50px;
+    width:50px;
+    text-align:center;
+    font-size:34px;
+    font-style:normal;
+    font-weight:400;
+    color:#FFF;
+    border-radius:50%;
+    cursor:pointer;
+    top:50%
+    }
+    @media screen and (max-width: 550px) {
+        .slider-wrapper i {
+        top: 75%;
+        }
+    }
+    
+    .slider-wrapper i:first-child {
+    left:2%
+    }
+    
+    .slider-wrapper i:last-child {
+    right:2%
+    }
+    
+    .slider {
+    display:flex;
+    width:auto;
+    overflow-x:auto;
+    scroll-snap-type:x mandatory;
+    scroll-behavior:smooth;
+    scrollbar-width:0;
+    box-shadow:0 1.5rem 3 rem -.75rem hsla(0,saturation,lightness,alpha)
+    }
+    
+    .slider::-webkit-scrollbar {
+    display:none
+    }
+    
+    .slider.dragging .slider-img {
+    cursor:grab;
+    user-select:none
+    }
+    
+    .slider.no-transition {
+    scroll-behavior:auto
+    }
+    
+    .slider img {
+    width:100%;
+    max-width:2900px;
+    object-fit:cover
+    }
+    
+    .slider a {
+    flex:1 0 100%;
+    scroll-snap-align:start;
+    scroll-snap-type:none;
+    object-fit:cover
+    }
+    
+    .slider-nav {
+    display:flex;
+    column-gap:.5rem;
+    position:absolute;
+    bottom:1rem;
+    left:50%;
+    transform:translateX(-50%);
+    z-index:1
+    }
+    
+    .slider-nav a {
+    width:.6rem;
+    height:.6rem;
+    border-radius:50%;
+    background-color:#fff;
+    opacity:.5;
+    transition:opacity ease 250ms
+    }
+    
+    .slider-nav a:hover {
+    opacity:1;
+    background-color:#FFF;
+    cursor:pointer
+    }
+    
+    .img2 {
+    display:none
+    }
+    
+    @media only screen and (max-width: 568px) {
+        .img1 {
+        display:none
+        }
+        
+        .img2 {
+        display:block
+        }
+    }
+    
+    .sobre {
+    position:relative;
+    width:100%;
+    max-width:800px;
+    margin:auto;
+    margin-top:100px;
+    margin-bottom:120px;
+    padding:0 10.75vw
+    }
+    
+    .sobre p {
+    display:flex;
+    flex-direction:column;
+    width:100%;
+    height:auto;
+    align-items:center;
+    justify-content:center;
+    z-index:1;
+    font-weight:400;
+    font-size:14px;
+    font-style:normal;
+    line-height:22px;
+    color:#333
+    }
+    
+    #myBtn {
+    display:flex;
+    align-content:center;
+    margin:auto;
+    margin-top:14px
+    }
+    
+    #more {
+    display:none
+    }
+    
+    .sobre button {
+    grid-column-start:2;
+    grid-column-end:2;
+    grid-row-start:3;
+    grid-row-end:3;
+    align-items:center;
+    align-content:baseline;
+    margin:0 16px;
+    padding:6px 16px;
+    border-radius:20px;
+    z-index:1;
+    max-width:120px;
+    height:auto;
+    background-color:transparent;
+    list-style:none;
+    text-decoration:none;
+    font-family:Arial,Helvetica,sans-serif;
+    font-size:16px;
+    font-style:normal;
+    font-weight:400;
+    line-height:100%
+    }
+    
+    @media only screen and (max-width: 768px) {
+        .sobre {
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        justify-content:center;
+        align-content:stretch;
+        padding:0 2rem
+        }
+    }
+    
+    .imagem-perfil {
+    width:100%;
+    max-width:800px;
+    margin:auto;
+    margin-top:120px;
+    margin-bottom:120px;
+    padding:0 10.75vw
+    }
+    
+    .imagem-perfil img {
+    width:100%;
+    max-width:1200px
+    }
+    
+    @media only screen and (max-width: 768px) {
+        .imagem-perfil {
+        display:flex;
+        margin-bottom:8rem;
+        padding:0 2rem
+        }
+        
+        .imagem-perfil img {
+        width:100%;
+        max-width:800px
+        }
+    }
+    
+    @media only screen and (max-width: 588px) {
+        .imagem-perfil {
+        display:flex;
+        margin-bottom:5rem;
+        padding:0 2rem
+        }
+        
+        .imagem-perfil img {
+        width:100%;
+        max-width:600px
+        }
+    }
+    
+    .slider2-wrapper {
+    position:relative;
+    width:100%;
+    max-width:1200px;
+    justify-content:center;
+    align-content:center
+    }
+    
+    .slider2 {
+    position:relative;
+    width:100%;
+    max-width:1050px;
+    margin:auto;
+    padding:10px 0
+    }
+    
+    .slider2text {
+    display:flex;
+    overflow-x:hidden;
+    scroll-snap-type:x mandatory;
+    max-height:1200px;
+    position:relative;
+    flex:1 0 100%;
+    scroll-snap-align:start;
+    object-fit:cover;
+    max-height:900px;
+    width:100%;
+    text-align:center
+    }
+    
+    .textslide q {
+    align-content:center;
+    font-size:28px;
+    font-style:normal;
+    font-weight:400;
+    line-height:normal
+    }
+    
+    .textslide p {
+    margin-top:22px;
+    font-size:28px;
+    font-style:bold;
+    font-weight:700;
+    line-height:normal
+    }
+    
+    .slider2-nav {
+    display:flex;
+    column-gap:.5rem;
+    position:absolute;
+    bottom:-3rem;
+    left:50%;
+    transform:translateX(-50%);
+    z-index:1
+    }
+    
+    .slider2-nav a {
+    width:.75rem;
+    height:.75rem;
+    border-radius:50%;
+    background-color:grey;
+    opacity:.75;
+    transition:opacity ease 250ms;
+    cursor:pointer; 
+    }
+    
+    .active,.dot2:hover {
+    opacity:1
+    }
+    
+    #arrowSlider2 {
+    position:absolute;
+    height:50px;
+    width:50px;
+    text-align:center;
+    font-size:40px;
+    font-family:Arial,Helvetica,sans-serif;
+    color:#000;
+    border-radius:50%;
+    cursor:pointer;
+    top:40%
+    }
+    
+    #arrowSlider2:first-child {
+    left:-6%
+    }
+    
+    #arrowSlider2 {
+    right:-6%;
+    }
+    
+    @media only screen and (max-width: 788px) {
+        .textslide q {
+        font-size:16px;
+        }
+        
+        .textslide p {
+        font-size:16px;
+        }
+        .slider2-nav {
+        bottom:-1.5rem;}
+        .slider2-nav a {
+        width:.5rem;
+        height:.5rem;
+        }
+        .slider2-wrapper {
+        width:100%;
+        max-width:800px;
+        padding:0 5rem
+        }
+        #arrowSlider2 {
+        font-size:30px;        
+        }
+        #arrowSlider2:first-child {
+        left:0
+        }
+        #arrowSlider2:last-child {
+        right:0
+        }
+    }
+    
+    .contato {
+    padding:0 2rem;
+    margin-bottom:220px;
+    margin-top:100px
+    }
+    
+    .contato h1 {
+    width:100%;
+    max-width:1200px;
+    font-family:'Inter',sans-serif;
+    font-size:17vw;
+    font-style:normal;
+    font-weight:400;
+    line-height:normal;
+    text-align:stretch;
+    justify-content:start
+    }
+    
+    .contato p {
+    text-align:right
+    }
+    
+    @media only screen and (min-width: 868px) {
+        .contato {
+        padding:0 2rem;
+        margin-bottom:120px
+        }
+        
+        .contato h1 {
+        font-size:200px;
+        }
+    }
+    @media only screen and (max-width: 588px) {
+    .contato {
+    padding:0 2rem;
+    margin-bottom:120px
+    }
+    
+    .contato h1 {
+    font-size:4rem
+    }
+    
+    .contato p {
+    text-align:right
+    }
+    }
+    
+    footer {
+    background-color:#000;
+    padding:20px 30px 15px
+    }
+    
+    .grid-footer {
+    display:grid;
+    grid-template-columns:1fr 1fr 1fr;
+    color:#a3a3a3;
+    padding-bottom:50px
+    }
+    
+    .grid-footer img {
+    width:250px;
+    grid-column-start:1;
+    grid-row-start:1;
+    padding:30px 50px 10px;
+    position:absolute
+    }
+    
+    @media screen and (max-width: 560px) {
+        .grid-footer img {
+        width:190px;
+        height:auto;
+        padding-left:10px
+        }
+    }
+    
+    .grid-footer h2 {
+    margin-top:1.25rem;
+    grid-column-start:3;
+    grid-row-start:1;
+    font-family:Arial,Helvetica,sans-serif;
+    align-items:center;
+    font-size:14px;
+    font-weight:700 700
+    }
+    
+    .grid-footer h5 {
+    margin-top:1.5rem;
+    grid-column-start:3;
+    grid-row-start:2;
+    font-family:Arial,Helvetica,sans-serif;
+    font-size:14px;
+    font-weight:400
+    }
+    
+    .grid-footer h6 {
+    margin-top:1.25rem;
+    grid-column-start:3;
+    grid-row-start:3;
+    font-family:Arial,Helvetica,sans-serif;
+    font-size:14px;
+    font-weight:400
+    }
+    
+    .grid-footer a {
+    grid-column-start:3;
+    grid-row-start:4
+    }
+    
+    .copyright {
+    padding:20px 20px 0;
+    color:#333;
+    width:100%;
+    max-width:1900px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-family:Arial,sans-serif;
+    font-size:14px;
+    font-weight:400;
+    border-top:solid 2px #333
+    }
